# oanda-fxdata-etl

./: .gitignore  README.md  build.py  installer.py  installer_config.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
fixtures/: oanda_streams_sample.json
oanda-fxdata-etl/: cleanup_fs.py  config.py  db.py  fs.py  main.py  oanda_dto.py  oanda_filesystem.py  oanda_schema.py
oanda-fxdata-etl/sql/: R0__create_roles_permissions.sql  R1_delete_duplicate_filesystem.sql  V1__create_new_schema.sql  V2__create_fx_files.sql  V3__create_fx_prices.sql  V4__create_fx_prices_hypertable.sql  V5__create_fx_prices_historical.sql  V6__backfill_fx_prices_historical.sql  V7__last_prices_view.sql  V8__refresh_last_prices.sql
scripts/: installer.py  main_wrapper.sh  md5_creds.py  move_old_files.sh  postgres_creds.py  upgrade_postgres.sh
scripts/timescaledb/: hypertable.sql
sql/: R0__create_roles.sql  V1__create_new_schema.sql  V2__create_fx_files.sql  V3__create_fx_prices.sql
src/main/python/: oanda_dto.py  oanda_filesystem.py  stream_parser.py
src/main/scripts/timescaledb/: schema.sql
src/main/sql/: V2__create_fx_files.sql  V3__create_fx_prices.sql
src/unittest/python/: oanda_dto_tests.py  oanda_filesystem_tests.py  streams_parser_tests.py
tests/: __init__.py  test_db.py  test_fs.py  test_oanda_db.py  test_oanda_dto.py  test_oanda_filesystem.py  test_oanda_schema.py  test_streams_parser.py
tests/fixtures/: oanda_streams_sample.json
