[tool.poetry]
name = "oanda-fxdata-etl"
version = "0.1.0"
description = "ETL scripts which manipulate Oanda FX tick data and allow for ingestion to a timescale db"
authors = ["Juraj Zachar <juraj.zachar@gmail.com>"]
license = "GNU GPL"
packages = [
    { include = "oanda-fxdata-etl" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
psycopg2-binary = {version="2.9.10", extras=["pool"]}
SQLAlchemy = "^2.0"
fastapi = "^0.115"
pydantic = "*"
joblib = "^1.3"
websocket-client = "*"
pyyaml = "*"
postgres = "^4.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^6"
pytest = "^8.1.1"
coverage = "^7.4.4"
pytest-cov = "^4"
mockito = "^1.4"
testcontainers = {version=">=3.7", extras=["postgres"]}

[tool.poetry.scripts]
build = "scripts.installer:install"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"